--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+
+<section class="box">
+
 	<img src="images/foto.jpg" alt="Eliška Veselá">
 
 	<h1>Eliška Veselá</h1>
@@ -18,6 +21,9 @@
 
 	<a href="https://twitter.com/">Twitter</a>
 	<a href="https://www.facebook.com/">Facebook</a>
+
+</section>
+
 
 </body>
 </html>
