--- a/index.html
+++ b/index.html
@@ -19,17 +19,10 @@
 
 	<p>I přes velké pracovní nasazení si každý den najde čas na svou dceru a dva psy. Ráda jezdí na koni, plave a chodí po horách. Její vysněná dovolená je strávit půl roku v kanadské divočině.</p>
 
-</section>
 
-<section class="twitter">
+	<a class="twitter" href="https://twitter.com/">Twitter</a>
 
-	<a href="https://twitter.com/">Twitter</a>
-
-</section>	
-
-<section class="facebook">
-
-	<a href="https://www.facebook.com/">Facebook</a>
+	<a class="facebook" href="https://www.facebook.com/">Facebook</a>
 
 </section>
 
